// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SidePanel renders the expected view 1`] = `
<style__PanelWrapper>
  <style__CardList>
    <style__CardItem
      isSelected={false}
      key="ChIJkVLoONZ_j4ARx2vJ4umERnI"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <RestaurantDetails
        name="Uncle Vito's Pizza"
        photoUrl="test-file-stub"
        placeUrl="https://www.google.com/maps/search/?api=1&query=Uncle%20Vito's%20Pizza&query_place_id=ChIJkVLoONZ_j4ARx2vJ4umERnI"
        priceLevel={1}
        rating={4.3}
        supportingText="restaurant"
        userRatingsTotal={1427}
      />
      <style__FavoriteHeartWrapper>
        <style__FavoriteHeartButton
          onClick={[Function]}
        >
          <HeartIcon
            variant="gray"
          />
        </style__FavoriteHeartButton>
      </style__FavoriteHeartWrapper>
    </style__CardItem>
    <style__CardItem
      isSelected={false}
      key="ChIJg7cNIYyAhYAR8D4ml1oItTg"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <RestaurantDetails
        name="Roxanne's Cafe"
        photoUrl="test-file-stub"
        placeUrl="https://www.google.com/maps/search/?api=1&query=Roxanne's%20Cafe&query_place_id=ChIJg7cNIYyAhYAR8D4ml1oItTg"
        priceLevel={2}
        rating={4.2}
        supportingText="restaurant"
        userRatingsTotal={1219}
      />
      <style__FavoriteHeartWrapper>
        <style__FavoriteHeartButton
          onClick={[Function]}
        >
          <HeartIcon
            variant="gray"
          />
        </style__FavoriteHeartButton>
      </style__FavoriteHeartWrapper>
    </style__CardItem>
    <style__CardItem
      isSelected={false}
      key="ChIJaa9OAYyAhYARxwgUHLNEpOY"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <RestaurantDetails
        name="Bouche"
        photoUrl="test-file-stub"
        placeUrl="https://www.google.com/maps/search/?api=1&query=Bouche&query_place_id=ChIJaa9OAYyAhYARxwgUHLNEpOY"
        priceLevel={3}
        rating={4.5}
        supportingText="bar"
        userRatingsTotal={465}
      />
      <style__FavoriteHeartWrapper>
        <style__FavoriteHeartButton
          onClick={[Function]}
        >
          <HeartIcon
            variant="gray"
          />
        </style__FavoriteHeartButton>
      </style__FavoriteHeartWrapper>
    </style__CardItem>
    <style__CardItem
      isSelected={false}
      key="ChIJvXXIOoyAhYARe-ixq3WdmrY"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <RestaurantDetails
        name="Sons & Daughters"
        photoUrl="test-file-stub"
        placeUrl="https://www.google.com/maps/search/?api=1&query=Sons%20%26%20Daughters&query_place_id=ChIJvXXIOoyAhYARe-ixq3WdmrY"
        priceLevel={4}
        rating={4.6}
        supportingText="restaurant"
        userRatingsTotal={249}
      />
      <style__FavoriteHeartWrapper>
        <style__FavoriteHeartButton
          onClick={[Function]}
        >
          <HeartIcon
            variant="gray"
          />
        </style__FavoriteHeartButton>
      </style__FavoriteHeartWrapper>
    </style__CardItem>
  </style__CardList>
</style__PanelWrapper>
`;

exports[`SidePanel renders the expected view when the first item is favorited 1`] = `
<style__PanelWrapper>
  <style__CardList>
    <style__CardItem
      isSelected={false}
      key="ChIJkVLoONZ_j4ARx2vJ4umERnI"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <RestaurantDetails
        name="Uncle Vito's Pizza"
        photoUrl="test-file-stub"
        placeUrl="https://www.google.com/maps/search/?api=1&query=Uncle%20Vito's%20Pizza&query_place_id=ChIJkVLoONZ_j4ARx2vJ4umERnI"
        priceLevel={1}
        rating={4.3}
        supportingText="restaurant"
        userRatingsTotal={1427}
      />
      <style__FavoriteHeartWrapper>
        <style__FavoriteHeartButton
          onClick={[Function]}
        >
          <HeartIcon
            variant="green"
          />
        </style__FavoriteHeartButton>
      </style__FavoriteHeartWrapper>
    </style__CardItem>
    <style__CardItem
      isSelected={false}
      key="ChIJg7cNIYyAhYAR8D4ml1oItTg"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <RestaurantDetails
        name="Roxanne's Cafe"
        photoUrl="test-file-stub"
        placeUrl="https://www.google.com/maps/search/?api=1&query=Roxanne's%20Cafe&query_place_id=ChIJg7cNIYyAhYAR8D4ml1oItTg"
        priceLevel={2}
        rating={4.2}
        supportingText="restaurant"
        userRatingsTotal={1219}
      />
      <style__FavoriteHeartWrapper>
        <style__FavoriteHeartButton
          onClick={[Function]}
        >
          <HeartIcon
            variant="gray"
          />
        </style__FavoriteHeartButton>
      </style__FavoriteHeartWrapper>
    </style__CardItem>
    <style__CardItem
      isSelected={false}
      key="ChIJaa9OAYyAhYARxwgUHLNEpOY"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <RestaurantDetails
        name="Bouche"
        photoUrl="test-file-stub"
        placeUrl="https://www.google.com/maps/search/?api=1&query=Bouche&query_place_id=ChIJaa9OAYyAhYARxwgUHLNEpOY"
        priceLevel={3}
        rating={4.5}
        supportingText="bar"
        userRatingsTotal={465}
      />
      <style__FavoriteHeartWrapper>
        <style__FavoriteHeartButton
          onClick={[Function]}
        >
          <HeartIcon
            variant="gray"
          />
        </style__FavoriteHeartButton>
      </style__FavoriteHeartWrapper>
    </style__CardItem>
    <style__CardItem
      isSelected={false}
      key="ChIJvXXIOoyAhYARe-ixq3WdmrY"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <RestaurantDetails
        name="Sons & Daughters"
        photoUrl="test-file-stub"
        placeUrl="https://www.google.com/maps/search/?api=1&query=Sons%20%26%20Daughters&query_place_id=ChIJvXXIOoyAhYARe-ixq3WdmrY"
        priceLevel={4}
        rating={4.6}
        supportingText="restaurant"
        userRatingsTotal={249}
      />
      <style__FavoriteHeartWrapper>
        <style__FavoriteHeartButton
          onClick={[Function]}
        >
          <HeartIcon
            variant="gray"
          />
        </style__FavoriteHeartButton>
      </style__FavoriteHeartWrapper>
    </style__CardItem>
  </style__CardList>
</style__PanelWrapper>
`;

exports[`SidePanel renders the expected view when updating favorites 1`] = `
<style__PanelWrapper>
  <style__CardList>
    <style__CardItem
      isSelected={false}
      key="ChIJkVLoONZ_j4ARx2vJ4umERnI"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <RestaurantDetails
        name="Uncle Vito's Pizza"
        photoUrl="test-file-stub"
        placeUrl="https://www.google.com/maps/search/?api=1&query=Uncle%20Vito's%20Pizza&query_place_id=ChIJkVLoONZ_j4ARx2vJ4umERnI"
        priceLevel={1}
        rating={4.3}
        supportingText="restaurant"
        userRatingsTotal={1427}
      />
      <style__FavoriteHeartWrapper>
        <style__FavoriteHeartButton
          onClick={[Function]}
        >
          <LoadingSpinner />
        </style__FavoriteHeartButton>
      </style__FavoriteHeartWrapper>
    </style__CardItem>
    <style__CardItem
      isSelected={false}
      key="ChIJg7cNIYyAhYAR8D4ml1oItTg"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <RestaurantDetails
        name="Roxanne's Cafe"
        photoUrl="test-file-stub"
        placeUrl="https://www.google.com/maps/search/?api=1&query=Roxanne's%20Cafe&query_place_id=ChIJg7cNIYyAhYAR8D4ml1oItTg"
        priceLevel={2}
        rating={4.2}
        supportingText="restaurant"
        userRatingsTotal={1219}
      />
      <style__FavoriteHeartWrapper>
        <style__FavoriteHeartButton
          onClick={[Function]}
        >
          <LoadingSpinner />
        </style__FavoriteHeartButton>
      </style__FavoriteHeartWrapper>
    </style__CardItem>
    <style__CardItem
      isSelected={false}
      key="ChIJaa9OAYyAhYARxwgUHLNEpOY"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <RestaurantDetails
        name="Bouche"
        photoUrl="test-file-stub"
        placeUrl="https://www.google.com/maps/search/?api=1&query=Bouche&query_place_id=ChIJaa9OAYyAhYARxwgUHLNEpOY"
        priceLevel={3}
        rating={4.5}
        supportingText="bar"
        userRatingsTotal={465}
      />
      <style__FavoriteHeartWrapper>
        <style__FavoriteHeartButton
          onClick={[Function]}
        >
          <LoadingSpinner />
        </style__FavoriteHeartButton>
      </style__FavoriteHeartWrapper>
    </style__CardItem>
    <style__CardItem
      isSelected={false}
      key="ChIJvXXIOoyAhYARe-ixq3WdmrY"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <RestaurantDetails
        name="Sons & Daughters"
        photoUrl="test-file-stub"
        placeUrl="https://www.google.com/maps/search/?api=1&query=Sons%20%26%20Daughters&query_place_id=ChIJvXXIOoyAhYARe-ixq3WdmrY"
        priceLevel={4}
        rating={4.6}
        supportingText="restaurant"
        userRatingsTotal={249}
      />
      <style__FavoriteHeartWrapper>
        <style__FavoriteHeartButton
          onClick={[Function]}
        >
          <LoadingSpinner />
        </style__FavoriteHeartButton>
      </style__FavoriteHeartWrapper>
    </style__CardItem>
  </style__CardList>
</style__PanelWrapper>
`;
